# Sample_code_2

./: .gitignore  Dockerfile-dev  Dockerfile-make  Dockerfile-prod  Dockerfile-test  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
data/: 20240311145710.gdp_by_industry.pkl  20240311145742.gdp_by_industry.csv
sample_1/: main.py  test_sample.py
sample_1/libs/: storages.py  utils.py
sample_2/: main.py
sample_2/libs/: storages.py
tests/: test_sample.py
