[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "sample_1"
version = "0.1.0"
description = "Sample Code 1"
authors = ["KJ Lang <k.j.lang.tech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
setuptools = "*"
wheel = "*"
pytest = "*"
boto3 = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

